==> ADKaster/eece-capstone/MSP432R_example/src/Adafruit_BNO055.cpp <==
#include <math.h>
#include <limits.h>
#include "inc/Adafruit_BNO055.h"
#include <ti/drivers/I2C.h>
#include <unistd.h>
#include <time.h>

byte Adafruit_BNO055::read8(adafruit_bno055_reg_t reg )
{
    I2C_Transaction trans;
    uint8_t value = 0;

    trans.slaveAddress = _address;
    trans.writeBuf = (void *)&reg;
    trans.readBuf = (void *)&value;
    trans.writeCount = 1;
    trans.readCount = 1;
    trans.arg = NULL;

    I2C_transfer(_bus, &trans);
    return value;
}

bool Adafruit_BNO055::readLen(adafruit_bno055_reg_t reg, byte * buffer, uint8_t len)
{
    I2C_Transaction trans;

    uint8_t theReg = reg;

    trans.slaveAddress = _address;
    trans.writeBuf = (void *)&theReg;
    trans.readBuf = (void *)buffer;
    trans.writeCount = 1;
    trans.readCount = len;
    trans.arg = NULL;

    return I2C_transfer(_bus, &trans);
}
